--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A repository for a Library Asset Management API",
   "main": "index.js",
   "scripts": {
+    "start": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
