--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
-    "mongoose": "^5.9.19"
+    "mongoose": "^5.9.19",
+    "pingmydyno": "^1.5.1"
+  },
+  "engines": {
+    "node": "13.11.0"
   }
 }
